2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* src/liburbi/uabstractclient.cc,
	* src/liburbi/uclient.cc,
	* src/liburbi/uconversion.cc,
	* src/liburbi/uobject.cc,
	* src/liburbi/usyncclient.cc: Formatting changes.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Restyle.
	* src/liburbi/uabstractclient.cc,
	* src/liburbi/uclient.cc,
	* src/liburbi/uconversion.cc,
	* src/liburbi/uobject.cc,
	* src/liburbi/usyncclient.cc,
	* src/liburbi/usystem.cc,
	* src/liburbi/uvar.cc: Here.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Updates
	* src/liburbi/uclient.cc: Formatting changes.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	Simplify
	* include/urbi/uabstractclient.hh: Formatting changes.
	* src/liburbi/uclient.cc: couldn't -> cannot.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Add a missing ::urbi::
	* src/liburbi/uobject/urbi/uobject.hh.template: On echo uses.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Adjust to libport::hash
	* configure.ac: And remove no-Weffc++.

2006-12-19  Jean-Christophe Baillie  <baillie@gostai.com>

        Add support for kernel system message through the USystem API.
        UObjects that inherit from USystem will have access to the
        register_channel and receive_message methods to handle system
        messages, only in pluggin mode.
        
	Add support for kernel system messages in UObject with USystem
	* src/liburbi/Makefile.am: add usystem in the compile process.
	* src/liburbi/uobject/uobject.mk: add usystem to install process.
	* src/liburbi/uobject/urbi/usystem.hh: New.
	* src/liburbi/usystem.cc: New.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	Remove min workaround
	* src/liburbi/uabstractclient.cc: here.
	It is done in libport.

2006-12-14  Akim Demaille  <akim.demaille@free.fr>

	windows.h -> windows.hh
	* src/examples/monitor.cc, src/examples/urbibandwidth.cc,
	* src/examples/urbiping.cc, src/examples/urbiplay.cc, 