@@ -1,5 +1,10 @@
 2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
+	Restyle.
+	* liburbi/usyncclient.cc: Formatting changes.
+
+2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
 	More restyling.
 	* src/liburbi/uabstractclient.cc,
 	* src/liburbi/uclient.cc,
